--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,6 +28,33 @@
             "dependsOn": [
                 "cmake-configure"
             ]
+        },
+        {
+            "type": "shell",
+            "label": "C/C++: clang++ build active file",
+            "command": "clang++",
+            "args": [
+                "-std=c++17",
+                "-Wall",
+                "-Wextra",
+                // "-Werror",
+                "-fcolor-diagnostics",
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "Compiler: clang++"
         }
     ],
     "version": "2.0.0"
