--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,8 @@
     "--header-insertion=iwyu",
     // pch优化的位置
     "--pch-storage=disk",
+    // 添加 C++17 标准
+    // "--compile-commands-dir=${workspaceFolder}",
+    "-std=c++17"
   ]
 }
