update git submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,7 +15,7 @@
 	url = https://github.com/Albert26193/cpp-templates.git
 
 [submodule "cpp-design-pattern"]
-	path = cpp-templates
+	path = cpp-design-pattern
 	url = https://github.com/Albert26193/cpp-design-pattern.git
 
 [submodule "cpp-templates-tutorial"]
